--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,14 +5,14 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Canadian Well" />
-    <link rel="apple-touch-icon" href="logo192.png" />
+    <meta name="description" content="Puit Canadien" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link
       href="https://fonts.googleapis.com/css?family=Montserrat"
       rel="stylesheet"
     />
-    <title>Canadian Well</title>
+    <title>Puit Canadien</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
